Fix #10
