# LockProviderApi/Models/Http/LockResponse.cs
@@ -10,4 +10,8 @@ public class LockResponse : ResponseBase
     /// The lock name
     /// </summary>
     public string Name { get; set; } = null!;
+    /// <summary>
+    /// The UTC time the lock will expire
+    /// </summary>
+    public DateTime? ExpireAt { get; set; }
 }
